--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -231,11 +231,11 @@ for_window [class="pavucontrol"] floating enable, move position center
 
 
 #Set gaps size
-#gaps inner 5
-#gaps outer 5
+gaps inner 5
+gaps outer 5
  
 #Set window border size
-#new_window pixel 5
+new_window pixel 5
 
 #gaps inner|outer current|all set|plus|minus <px>
 
