I3: Make battery display on i3blocks

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -72,7 +72,7 @@ separator=true
 #[wifi]
 #instance=wlp3s0
 #interval=1
-#label=ifi
+#label=wifi
 #separator=true
 #command=/home/bryoh/.config/i3/wifi.sh
 #markup=pango
@@ -97,7 +97,7 @@ separator=true
 # Battery indicator
 # The battery instance defaults to 0.
 [battery]
-command=/home/bryoh/.config/i3/battery.py
+command=$HOME/.config/i3/battery.py
 markup=pango
 #label=BAT
 #label=⚡
