--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -193,8 +193,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id /usr/bin/pulseaudio-ctl up 5 #
 bindsym XF86AudioLowerVolume exec --no-startup-id /usr/bin/pulseaudio-ctl down 5 #pactl set-sink-volume 0 -5% && --no-startup-id pactl set-sink-volume 2 -5% # decrease volume
 
 # Use xbacklight to adjust screen brightness 
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec light -U 5 #  xbacklight -dec 10
+bindsym XF86MonBrightnessUp exec light -A 5 # xbacklight -inc 10
 
 # Take screenshots and snaps with scrot
 bindsym XF86Display exec --no-startup-id scrot ~/Downloads/Screenshot%Y-%m-%d%H:%M:%S.png
