--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -181,21 +181,21 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf #i3status
-        tray_output primary
-	colors {
-			background $bg-color
-		    	separator #757575
-			#                  border             background         text
-			focused_workspace  $bg-color          $bg-color          $text-color
-			inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-			urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-		}
-	#position top
-}
+#bar {
+#        status_command i3blocks -c ~/.config/i3/i3blocks.conf #i3status
+#        tray_output primary
+#	colors {
+#			background $bg-color
+#		    	separator #757575
+#			#                  border             background         text
+#			focused_workspace  $bg-color          $bg-color          $text-color
+#			inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+#			urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+#		}
+#	#position top
+#}
 
-
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
 
 bindsym $mod+shift+x exec ~/dotfiles/i3/.config/i3/i3lock++ blur #  i3lock #lockscreen
 #run two commands one will echo an error hopefully depening on whether I have
