--- a/i3/.config/polybar/config
+++ b/i3/.config/polybar/config
@@ -22,6 +22,7 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
+bottom = true
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
