--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -108,8 +108,8 @@ bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
 #set workspaces
-set $workspace9 "9: Skype"
-set $workspace10 "10:  "
+set $workspace9 "9"
+set $workspace10 "10: "
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -128,7 +128,7 @@ bindsym $mod+Shift+s sticky toggle
 
 # default workspaces
 assign [class="Skype"] $workspace9
-assign [class="spotify"] $workspace10
+assign [class="Spotify"] $workspace10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
