--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -38,7 +38,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec rofi -show run -lines 14 -eh 2 -width 90 -padding 70 -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "$active-color" -font "System San Francisco Display 10" -fuzzy -location 0 -sidebar-mode --auto-select -fake-transparency
 #TODO
-bindsym $mod+g exec echo '' | rofi -show -dmenu -p 'Search:' | xargs -I{} xdg-open https://www.google.uk/search?q={}
+#bindsym $mod+g exec echo '' | rofi -show -dmenu -p 'Search:' | xargs -I{} xdg-open https://www.google.uk/search?q={}
+bindsym $mod+g exec urxvt
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
