WDIO: New Wallpaper, thinner gaps and gitignore work specific stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ i3/.config/ranger/history
 i3/.config/ranger/bookmarks
 i3/.config/nvim/.netrwhist
 
+/i3/.config/ranger/bookmarks
+/i3/.config/ranger/history
+/i3/.config/ranger/tagged
