--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,6 @@ set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
 # increase scrollback lines
-set -g history-limit 10000
 
 # switch to last pane
 bind-key C-a last-pane
@@ -63,7 +62,8 @@ set -g status-right ''
 
 set -g status-justify centre
 set-option -g status-left-length 50
-set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | #(date '+%a, %b %d - %I:%M')"
+#set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | #(date '+%a, %b %d - %I:%M')"
+set-option -g status-right "#(date '+%a, %b %d - %I:%M')"
 set -g status-left "Session: #S"
 
 # Shift + arrows to resize pane
