WAL: Manage colours using pywal;

--- a/i3/.config/polybar/config
+++ b/i3/.config/polybar/config
@@ -8,16 +8,20 @@
 ;=====================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #000000
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #AE9963
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+background = ${xrdb:color0:#222}
+foreground = ${xrdb:color7:#222}
+foreground-alt = ${xrdb:color7:#222}
+primary = ${xrdb:color1:#222}
+secondary = ${xrdb:color2:#222}
+alert = ${xrdb:color3:#222}
+;background = #000000
+;foreground = #AE9963
+;foreground-alt = #555
+;primary = #ffb52a
+;secondary = #e60053
+;alert = #bd2c40
 
+background-alt = #444
 [bar/bar1]
 #monitor = DP-1 # ${env:MONITOR:HDMI-1}
 monitor-fallback = eDP-1 
@@ -29,8 +33,8 @@ bottom = true
 radius = 6.0
 fixed-center = false
 
-background = #00000000 
-;${colors.background}
+;background = #00000000 
+background =${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3
