--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -194,15 +194,16 @@ exec_always --no-startup-id nm-applet  # use blueman with polybar
 
 #Custom wallpaper
 exec_always feh --bg-scale $HOME/dotfiles/wallpaper.jpg
+exec 'wal --backend wal --theme random_dark'
 exec_always --no-startup-id xrandr --output HDMI-0 --off --output DVI-I-1 --off --output DVI-I-0 --off --output DVI-I-3 --mode 1920x1080 --pos 0x0 --rotate normal --output DVI-I-2 --mode 1920x1080 --pos 1920x0 --rotate normal
 exec --no-startup-id "compton -f --config $HOME/.compton.conf"
-exec --no-startup-id 'wal -i $HOME/dotfiles/wallpaper.jpg'
+#exec --no-startup-id 'wal -i $HOME/dotfiles/wallpaper.jpg'
 
 # default workspaces
 assign [class="Skype"] $workspace9
 assign [class="Slack"] $workspace9
 assign [class="Gitter"] $workspace9
-assign [class="Spotify"] $workspace10
+assign [class="spotify"] $workspace10
 
 #Open some programs in floating mode by default
 for_window [class="mpv"] floating enable #, move position center
@@ -213,6 +214,9 @@ for_window [class="Thunar"] floating enable #, move position center
 for_window [class="Lxappearance"] floating enable #, move position center
 for_window [class="Pavucontrol"] floating enable #, move position center
 for_window [class="Nautilus"] floating enable , move position center
+for_window [class="Skype"] floating enable 
+for_window [class="Slack"] floating enable 
+for_window [class="Gitter"] floating enable
 
 
 ##############
