--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -86,6 +86,9 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Copy paste from system clipboard
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Allow mouse usage and copy pasting behavior (Compat with Tmux 2.4+)
 set -g mouse on
 bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
@@ -110,6 +113,7 @@ set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly fr
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+set -g @plugin 'tmux-plugins/tmux-yank' # copy paste
 
 # Tmux will auto-start on system boot
 set -g @continuum-boot 'on'
