--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -205,6 +205,9 @@ exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
+# launch categorized menu
+bindsym $mod+z exec --no-startup-id morc_menu
+exec --no-startup-id volumeicon
 
 #Custom wallpaper
 exec_always feh --bg-scale $HOME/dotfiles/wallpaper.jpg
