--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -188,6 +188,22 @@ bindsym --release Num_Lock exec pkill -SIGRTMIN+11 i3blocks
  
 # I have a touchscreen laptop which is fucked
 # exec --no-start-up-id xinput disable "ELAN Touchscreen"
+# Start Applications
+bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
+#bindsym $mod+F2 exec palemoon
+#bindsym $mod+F3 exec pcmanfm
+## bindsym $mod+F3 exec ranger
+#bindsym $mod+Shift+F3 exec gksu pcmanfm
+#bindsym $mod+F5 exec terminal -e 'mocp'
+#bindsym $mod+t exec --no-startup-id pkill compton
+#bindsym $mod+Ctrl+t exec --no-startup-id compton -b
+#bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
+#bindsym Print exec --no-startup-id i3-scrot
+#bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
+#bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
+#bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
+#bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
+
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
