--- a/compton/.compton.conf
+++ b/compton/.compton.conf
@@ -1,89 +1,72 @@
 # Shadow
-shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-# shadow-opacity = 0.7;
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
-shadow-exclude = [
-	"name = 'Notification'",
-	"class_g = 'Conky'",
-	"class_g ?= 'Notify-osd'",
-	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c"
-];
-# shadow-exclude = "n:e:Notification";
-# shadow-exclude-reg = "x10+0+0";
-# xinerama-shadow-crop = true;
+shadow = false;			# Enabled client-side shadows on windows.
+no-dock-shadow = false;		# Avoid drawing shadows on dock/panel windows.
+no-dnd-shadow = true;		# Don't draw shadows on DND windows.
+clear-shadow = true;		# Zero the part of the shadow's mask behind the
+				# window. Fix some weirdness with ARGB windows.
+shadow-radius = 12;		# The blur radius for shadows. (default 12)
+shadow-offset-x = -15;		# The left offset for shadows. (default -15)
+shadow-offset-y = -15;		# The top offset for shadows. (default -15)
+shadow-opacity = 0.75;		# The translucency for shadows. (default .75)
+shadow-exclude = [ "n:e:Notification", "name='Polybar tray window'", "class_g = 'i3-frame'" ];	# Exclude conditions for shadows.
+shadow-ignore-shaped = true;	# Avoid drawing shadow on all shaped windows
+				# (see also: --detect-rounded-corners)
 
 # Opacity
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
-# active-opacity = 0.8;
-frame-opacity = 0.7;
-inactive-opacity-override = false;
-alpha-step = 0.06;
-# inactive-dim = 0.2;
-# inactive-dim-fixed = true;
-# blur-background = true;
-# blur-background-frame = true;
-blur-kern = "3x3box";
-# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-# blur-background-fixed = true;
-blur-background-exclude = [
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
-];
-# opacity-rule = [ "80:class_g = 'URxvt'" ];
+menu-opacity = 0.9;			# The opacity for menus. (default 1.0)
+inactive-opacity = 0.8;			# Default opacity of inactive windows. (0.0 - 1.0)
+inactive-opacity-override = true;
+active-opacity = 1;			# Default opacity for active windows. (0.0 - 1.0)
+alpha-step = 0.06;			# XRender backend: Step size for alpha pictures. Increasing
+					# it may result in less X resource usage,
+					# Yet fading may look bad.
+blur-background-fixed = false;		# Do not let blur radius adjust based on window opacity.
+blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+					# Exclude conditions for background blur.
+opacity-rule = ["95:class_g = 'URxvt'", "90:class_g *?= 'emacs'"];
 
 # Fading
-fading = true;
-# fade-delta = 30;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-# no-fading-openclose = true;
-# no-fading-destroyed-argb = true;
-fade-exclude = [ ];
+fading = true;			# Fade windows during opacity changes.
+fade-in-step = 0.03;		# Opacity change between steps while fading in. (default 0.028).
+fade-out-step = 0.03;		# Opacity change between steps while fading out. (default 0.03).
+fade-exclude = [ ];		# Exclude conditions for fading.
 
 # Other
-backend = "xrender";
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
-detect-rounded-corners = true;
-detect-client-opacity = true;
-refresh-rate = 0;
-vsync = "none";
-dbe = false;
-paint-on-overlay = true;
-# sw-opti = true;
-# unredir-if-possible = true;
-# unredir-if-possible-delay = 5000;
-# unredir-if-possible-exclude = [ ];
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
-detect-transient = true;
-detect-client-leader = true;
-invert-color-include = [ ];
-# resize-damage = 1;
-
-# GLX backend
-# glx-no-stencil = true;
-glx-copy-from-front = false;
-# glx-use-copysubbuffermesa = true;
-# glx-no-rebind-pixmap = true;
-glx-swap-method = "undefined";
-# glx-use-gpushader4 = true;
-# xrender-sync = true;
-# xrender-sync-fence = true;
+backend = "xrender"		# Backend to use: "xrender" or "glx". GLX backend is typically
+				# much faster but depends on a sane driver.
+mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
+mark-ovredir-focused = true;	# Mark all non-WM but override-redirect windows active (e.g. menus).
+use-ewmh-active-win = false;	# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused
+				# instead of using FocusIn/Out events. Usually more reliable but
+				# depends on a EWMH-compliant WM.
+detect-rounded-corners = true;	# Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
+detect-client-opacity = true;	# Detect _NET_WM_OPACITY on client windows, useful for window
+				# managers not passing _NET_WM_OPACITY of client windows to frame
+				# windows.
+refresh-rate = 0;		# For --sw-opti: Specify refresh rate of the screen. 0 for auto.
+vsync = "none";			# "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
+				# See man page for more details.
+dbe = false;			# Enable DBE painting mode. Rarely needed.
+paint-on-overlay = true;	# Painting on X Composite overlay window. Recommended.
+sw-opti = false;		# Limit compton to repaint at most once every 1 / refresh_rate.
+				# Incompatible with certain VSync methods.
+unredir-if-possible = false;	# Unredirect all windows if a full-screen opaque window is
+				# detected, to maximize performance for full-screen windows.
+focus-exclude = [
+"class_g *?= 'google-chrome'",
+"class_g *?= 'spotify'",
+"class_g *?= 'zathura'",
+"class_g *?= 'sxiv'",
+"class_g *?= 'eclipse'",
+"class_g *?= 'OSBot 2.5.24'"];		# A list of conditions of windows that should always be considered
+				# focused.
+detect-transient = true;	# Use WM_TRANSIENT_FOR to group windows, and consider windows in
+				# the same group focused at the same time.
+detect-client-leader = true;	# Use WM_CLIENT_LEADER to group windows.
+invert-color-include = [ ];	# Conditions for windows to be painted with inverted color.
 
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
 };
