--- a/i3/.config/gtk-3.0/settings.ini
+++ b/i3/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
-gtk-theme-name=Arc-Dark
-gtk-icon-theme-name=Arc-Icons
-gtk-font-name=System San Francisco Display 9
-gtk-cursor-theme-name=DMZ-White
+gtk-theme-name=Matcha-dark-azul
+gtk-icon-theme-name=ePapirus
+gtk-font-name=Noto Sans 10
+gtk-cursor-theme-name=xcursor-breeze-snow
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -12,4 +12,5 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
