TMUX and powerlines status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -88,9 +88,17 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Copy paste from system clipboard
 #bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+# Vim style
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 # Allow mouse usage and copy pasting behavior (Compat with Tmux 2.4+)
 set -g mouse on
+# Copy with mouse drag
+#setw -g mode-mouse on
+#set -g mouse-select-window on
+
 bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
 unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -123,7 +131,8 @@ set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
-# How to install other plugins from Github:
+source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf 
+ # How to install other plugins from Github:
 # To install new plugins press: prefix + I
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
