--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -3,7 +3,10 @@
 
 # Set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod1
-exec_always --no-startup-id wal --backend wal -i $HOME/dotfiles/wallpaper.jpg 
+
+# Cycle wallpapers and apply new colorscheme.
+bindsym $mod+shift+w exec "wal --backend wal -i $HOME/Pictures/"
+exec_always --no-startup-id wal --backend wal -i $HOME/Pictures/
 
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
@@ -30,6 +33,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec terminal
+bindsym $mod+g exec terminator -e 'tmux'
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -190,7 +194,7 @@ bindsym $mod+Shift+5 move container to workspace $ws5; workspace $ws5
 bindsym $mod+Shift+6 move container to workspace $ws6; workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws8; workspace $ws9
+bindsym $mod+Shift+9 move container to workspace $ws9; workspace $ws9
 
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] $ws1
@@ -201,7 +205,10 @@ bindsym $mod+Shift+9 move container to workspace $ws8; workspace $ws9
 assign [class="Skype"] $ws8
 assign [class="Slack"] $ws8
 assign [class="Gitter"] $ws8
-assign [class="Spotify"] $workspace9
+assign [class="Discord"] $ws8
+assign [class="Spotify"] $ws9
+assign [class="alsamixer"] $ws9
+assign [class="Rhythmbox"] $ws9
 
 
 # Open specific applications in floating mode
@@ -214,10 +221,16 @@ for_window [class="GParted"] floating enable border normal
 for_window [title="i3_help"] floating enable sticky enable border normal
 for_window [class="Lightdm-settings"] floating enable
 for_window [class="Lxappearance"] floating enable sticky enable border normal
+for_window [class="Pcmanfm"] floating enable sticky enable border normal
 for_window [class="Manjaro-hello"] floating enable
 for_window [class="Manjaro Settings Manager"] floating enable border normal
 for_window [title="MuseScore: Play Panel"] floating enable
 for_window [class="Nitrogen"] floating enable sticky enable border normal
+for_window [class="Slack"] floating enable 
+for_window [class="Gitter"] floating enable 
+for_window [class="Spotify"] floating enable 
+for_window [class="Rhythmbox"] floating enable 
+for_window [class="Discord"] floating enable 
 for_window [class="Oblogout"] fullscreen enable
 for_window [class="octopi"] floating enable
 for_window [title="About Pale Moon"] floating enable
@@ -292,6 +305,7 @@ mode "resize" {
 
 # Autostart applications
 exec --no-startup-id slack
+exec --no-startup-id spotify
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 exec --no-startup-id manjaro-hello
