--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -80,15 +80,15 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 # --- VIM style tmux config ----
 # smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Copy paste from system clipboard
-#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip'
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip" 
 # Vim style
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
 bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
@@ -131,7 +131,7 @@ set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
-source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf 
+source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf 
  # How to install other plugins from Github:
 # To install new plugins press: prefix + I
 # set -g @plugin 'github_username/plugin_name'
@@ -140,6 +140,4 @@ source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 
 # Initializes Tmux plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
-
+run -b '~/.tmux/plugins/tpm/tpm'
