--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -131,7 +131,7 @@ set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
-source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf 
+source /usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf 
  # How to install other plugins from Github:
 # To install new plugins press: prefix + I
 # set -g @plugin 'github_username/plugin_name'
