--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ i3/.config/gtk-3.0/bookmarks
 /weechat/.weechat/weechat.log
 /weechat/
 /.DS_Store
+/i3/.config/configstore/.gitignore
+/i3/.config/dask/.gitignore
+/i3/.config/gtk-2.0/.gitignore
