--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,13 +5,13 @@ set -g default-terminal 'screen-256color'
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+#setw -g mode-keys vi
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
+#bind-key -r C-h select-window -t :-
+#bind-key -r C-l select-window -t :+
 
 # act like GNU screen
 unbind C-b
@@ -66,6 +66,9 @@ set-option -g status-left-length 50
 set-option -g status-right "#(date '+%a, %b %d - %I:%M')"
 set -g status-left "Session: #S"
 
+# clear-screen 
+bind C-l send-keys 'C-l'
+
 # Shift + arrows to resize pane
 bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
@@ -111,8 +114,8 @@ unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys 
 unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
 unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
 
-bind-key h split-window -v -c '#{pane_current_path}'
-bind-key v split-window -h -c '#{pane_current_path}'
+#bind-key h split-window -v -c '#{pane_current_path}'
+#bind-key v split-window -h -c '#{pane_current_path}'
 
 # Tmux plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
@@ -122,6 +125,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on rebo
 set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
 set -g @plugin 'tmux-plugins/tmux-yank' # copy paste
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+
 
 # Tmux will auto-start on system boot
 set -g @continuum-boot 'on'
