--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -90,11 +90,11 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?
 #bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Copy paste from system clipboard
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip'
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip" 
-# Vim style
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
-bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip'
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip" 
+## Vim style
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+#bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 # Allow mouse usage and copy pasting behavior (Compat with Tmux 2.4+)
 set -g mouse on
@@ -106,13 +106,13 @@ bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-bind-key -T edit-mode-vi Up send-keys -X history-up
-bind-key -T edit-mode-vi Down send-keys -X history-down
-unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
-unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
+#bind-key -T edit-mode-vi Up send-keys -X history-up
+#bind-key -T edit-mode-vi Down send-keys -X history-down
+#unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
+#unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+#unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
+#unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
 
 #bind-key h split-window -v -c '#{pane_current_path}'
 #bind-key v split-window -h -c '#{pane_current_path}'
@@ -126,6 +126,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on rebo
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
 set -g @plugin 'tmux-plugins/tmux-yank' # copy paste
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
 
@@ -145,6 +146,7 @@ source /usr/share/powerline/bindings/tmux/powerline.conf
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-
+set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
+set -g @shell_mode 'vi'
 # Initializes Tmux plugin manager.
 run -b '~/.tmux/plugins/tpm/tpm'
