--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -76,9 +76,9 @@ bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
 
 bind-key c new-window -c '#{pane_current_path}'
-bind-key k confirm kill-window
+#bind-key k confirm kill-window
 
-bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+#bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 # --- VIM style tmux config ----
 # smart pane switching with awareness of vim splits
