--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal 'screen-256color'
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # act like vim
-#setw -g mode-keys vi
+setw -g mode-keys vi
 #bind h select-pane -L
 #bind j select-pane -D
 #bind k select-pane -U
