--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -74,7 +74,6 @@ bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
-bind-key -n F4 kill-pane
 
 bind-key c new-window -c '#{pane_current_path}'
 #bind-key k confirm kill-window
@@ -89,6 +88,13 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?
 #bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 #bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 #bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Copy paste from system clipboard
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip'
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip" 
+## Vim style
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+#bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 # Allow mouse usage and copy pasting behavior (Compat with Tmux 2.4+)
 set -g mouse on
@@ -123,10 +129,6 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-mem'
-set -g @plugin 'tmux-plugins/tmux-weather'
-
 
 
 # Tmux will auto-start on system boot
@@ -137,7 +139,6 @@ set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
-
 source /usr/share/powerline/bindings/tmux/powerline.conf
  # How to install other plugins from Github:
 # To install new plugins press: prefix + I
@@ -147,9 +148,5 @@ source /usr/share/powerline/bindings/tmux/powerline.conf
 
 set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
 set -g @shell_mode 'vi'
-
-# Use tmux buffers in combination with the system clipboard
-bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
-bind C-v run "tmux load-buffer - ; tmux paste-buffer"
 # Initializes Tmux plugin manager.
 run -b '~/.tmux/plugins/tpm/tpm'
