--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -74,7 +74,7 @@ bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
-bind-key -n F4 kill-pane
+#bind-key -n F4 kill-pane
 
 bind-key c new-window -c '#{pane_current_path}'
 #bind-key k confirm kill-window
