tmux: removed unnecessary colors and use fzf for session management

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,26 +35,8 @@ bind-key C-a last-pane
 set -g status on
 
 # soften status bar colors
-set -g status-bg '#586e75'
-set -g status-fg '#eee8d5'
-
-# More colors from Solarized
-# $base03:    #002b36;
-# $base02:    #073642;
-# $base01:    #586e75;
-# $base00:    #657b83;
-# $base0:     #839496;
-# $base1:     #93a1a1;
-# $base2:     #eee8d5;
-# $base3:     #fdf6e3;
-# $yellow:    #b58900;
-# $orange:    #cb4b16;
-# $red:       #dc322f;
-# $magenta:   #d33682;
-# $violet:    #6c71c4;
-# $blue:      #268bd2;
-# $cyan:      #2aa198;
-# $green:     #859900;
+# set -g status-bg '#586e75'
+# set -g status-fg '#586ed5'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
@@ -90,7 +72,6 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?
 #bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 #bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Allow mouse usage and copy pasting behavior (Compat with Tmux 2.4+)
 set -g mouse on
 # Copy with mouse drag
 #setw -g mode-mouse on
@@ -122,12 +103,24 @@ set -g @plugin 'tmux-plugins/tmux-yank' # copy paste
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-net-speed'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-mem'
-set -g @plugin 'tmux-plugins/tmux-weather'
+# set -g @plugin 'tmux-plugins/tmux-net-speed'
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'tmux-plugins/tmux-mem'
+# set -g @plugin 'tmux-plugins/tmux-weather'
+set -g @plugin 'omerxx/tmux-sessionx'
 
-
+bind-key "T" run-shell "sesh connect \"$(
+	sesh list | fzf-tmux -p 55%,60% \
+		--no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+		--bind 'tab:down,btab:up' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+		--bind 'ctrl-t:change-prompt(  )+reload(sesh list -t)' \
+		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
+)\""
 
 # Tmux will auto-start on system boot
 set -g @continuum-boot 'on'
@@ -138,7 +131,7 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
 
-source /usr/share/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python3.12/dist-packages/powerline/bindings/tmux/powerline.conf
  # How to install other plugins from Github:
 # To install new plugins press: prefix + I
 # set -g @plugin 'github_username/plugin_name'
